Mon Nov 3 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Changes to the panel view

Sat Nov  1 14:36:45 2003  Joern Thyssen  <jth@gnubg.org>

	* htmlimages (CommandExportHTMLImages): make the html image
	export work with the new board dimensions.
	(reported by olivier croisille)
	* html.c (printHTMLBoardGNU): some new images.

Wed Oct 29 12:26:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Moved .xpm files in root directory to xpm directory

Tue Oct 28 21:10:39 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* gtkoptions.c - add Turkish and Icelandic to language options

Tue Oct 28 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* import.c: Minor memory bug
	* gtkboard.c: Minor chequer sound fix

Fri Oct 25 10:10:07 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - correct stupid mistake causing board setup in sgf
          file to be reversed

Fri Oct 25 10:10:07 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - cast to keep compiler happy
	
Thu Oct 24 22:52:23 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* set.c backgammon.h rollout.c gnubg.c - added text mode commands
	  set rollout log on/off, set rollout logfile <template name>
	  When rollout log is set to on and rollout logfile has a valid
	  path and template, then each rollout will generate a .sgf file
	  of the game. The .sgf file name will use the template, followed
	  by '-'nnnnn'-'x.sgf  where nnnnn is the trial number (starts at
	  0) and x is a etter a-z to indicate which option is being done -
	  the top line in the rollout window is 'a', next 'b', etc/
	
Sat Oct 18 13:46:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.h, play.c, sgf.c: Tidy 3d dice shake code

Sat Oct 18 11:19:06 2003  Joern Thyssen  <jth@gnubg.org>

	* formatgs.c (formatGS): use fOutputDigits and fix typo in 
	calculation of confidence interval.
	(in part reported by Zorba)
	* analysis.c, html.c: always show overall statistics.
